--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,16 +1,21 @@
 ---
 
+plugins:
+  - jest
+
 env:
   node: true
 
 extends:
   - 'airbnb-base'
+  - 'plugin:jest/recommended'
 
 parserOptions:
   ecmaVersion: latest
 
 rules:
   no-console: 0
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
   import/extensions:
     - error
     - ignorePackages
