Feat support for comparing yaml files

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/gaucherov/gendiff#readme",
   "dependencies": {
     "commander": "^12.0.0",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
